# FixFlow.Server/Models/PasswordReset/PasswordResetRequest.cs
@@ -8,22 +8,21 @@ public class PasswordResetRequest
     [EmailAddress]
     public string Email { get; set; } = string.Empty;
 
+    [Required]
     public string token { get; set; }
 
     [Required]
     [MinLength(7)]
-    public string password { get; set; }
+    public string password { get; set; } = string.Empty;
 
     [Required]
     [MinLength(7)]
-    public string confirmPassword { get; set; }
+    public string confirmPassword { get; set; } = string.Empty;
 
-    public PasswordResetRequest(string _email, string _token, string _password, string _newPassword)
+    public PasswordResetRequest(string _email, string _token)
     {
         Email = _email;
         token = _token;
-        password = _password;
-        confirmPassword = _newPassword;
     }
 
 }
