# FixFlow.Server/swagger.json
@@ -122,24 +122,7 @@
             }
           },
           "401": {
-            "description": "Password change unsucessfull",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
+            "description": "Password change unsucessfull"
           }
         }
       }
@@ -171,27 +154,47 @@
         },
         "responses": {
           "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Email not found",
+            "description": "OK",
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
+                  "type": "string"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
+                  "type": "string"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
+                  "type": "string"
                 }
               }
             }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Email not found"
           }
         }
       }
@@ -273,7 +276,7 @@
         "tags": [
           "Accounts"
         ],
-        "summary": "Returns the Email belonging to that token for Password Change\r\nUsed when the User tries to access a 'Password Reset' link",
+        "summary": "Returns the PasswordReset belonging to that token\r\nUsed when the User tries to access a 'Password Reset' link",
         "parameters": [
           {
             "name": "token",
@@ -2088,7 +2091,8 @@
       "PasswordResetRequest": {
         "required": [
           "confirmPassword",
-          "password"
+          "password",
+          "token"
         ],
         "type": "object",
         "properties": {
@@ -2098,8 +2102,8 @@
             "nullable": true
           },
           "token": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "password": {
             "minLength": 7,
